--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "socket.io-client": "^4.0.1",
     "sweetalert2": "^10.15.7",
     "web-vitals": "^1.0.1"
